--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="http://2.bp.blogspot.com/-jHeUm8OAWM0/Td8WL0qDULI/AAAAAAAAAfA/jkN9OwroFWE/s1600/pandas+holding+hands.jpg">
                     </a>
                 </div>      
             </div>
